--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -73,7 +73,20 @@
                         <div class="col-10">
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
-                                        <a href="https://sybiltec.com/services">Services</a>
+                                        <a href="/">Home</a>
+                                        <div class="dropdown">
+                                            <button onclick="toggleDropdown()" class="dropbtn">Services 
+                                                <i class="fa-solid fa-angle-down"></i>
+                                            </button>
+                                            <div id="myDropdown" class="dropdown-content">
+                                              <a href="website-review.html">Website Review</a>
+                                              <a href="website-design.html">Website Design</a>
+                                              <a href="website-development.html">Website Development</a>
+                                              <a href="website-maintenance.html">Website Maintenance</a>
+                                              <a href="training.html">Training</a>
+                                              <a href="leaflet-design.html">Leaflet Design</a>
+                                            </div>
+                                          </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
                                         <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
@@ -299,6 +312,27 @@
                     x.className += " responsive";
                 } else {
                     x.className = "topnav";
+                }
+            }
+
+            /* When the user clicks on the button, 
+            toggle between hiding and showing the dropdown content */
+            function toggleDropdown() {
+            document.getElementById("myDropdown").classList.toggle("show");
+            console.log("click");
+            }
+
+            // Close the dropdown if the user clicks outside of it
+            window.onclick = function(event) {
+                if (!event.target.matches('.dropbtn')) {
+                    var dropdowns = document.getElementsByClassName("dropdown-content");
+                    var i;
+                    for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                    }
                 }
             }
             document.getElementById("year").innerHTML = new Date().getFullYear();
