--- a/events.html
+++ b/events.html
@@ -64,12 +64,12 @@
                                                 <i class="fa-solid fa-angle-down"></i>
                                             </button>
                                             <div id="myDropdown" class="dropdown-content">
-                                              <a href="website-review.html">Website Review</a>
-                                              <a href="website-design.html">Website Design</a>
-                                              <a href="website-development.html">Website Development</a>
-                                              <a href="website-maintenance.html">Website Maintenance</a>
-                                              <a href="training.html">Training</a>
-                                              <a href="leaflet-design.html">Leaflet Design</a>
+                                              <a href="https://sybiltec.com/website-review">Website Review</a>
+                                              <a href="https://sybiltec.com/website-design">Website Design</a>
+                                              <a href="https://sybiltec.com/website-development">Website Development</a>
+                                              <a href="https://sybiltec.com/website-maintenance">Website Maintenance</a>
+                                              <a href="https://sybiltec.com/training">Training</a>
+                                              <a href="https://sybiltec.com/leaflet-design">Leaflet Design</a>
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
