--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <h3>Website Review</h3>
                         <p>A detailed report with feedback on the main aspects of your site's user experience, search engine optimisation (SEO) and design. Recommended improvements are provided.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="website-review.html">Learn More</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-review">Learn More</a>   
                         </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                         <h3>Custom Website Design</h3>
                         <p>If you are looking to create a website that is as unique as you are, I will design a professional and user-friendly website that perfectly reflects your brand and style.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="website-design.html">Learn More</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-design">Learn More</a>   
                         </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                     <h3>Website Development</h3>
                     <p>Bespoke website development services tailored to your needs, including one-off tasks, design improvements and error fixing. Perfect for when you need support on an ad-hoc basis.</p>
                     <div class="center padding-bottom padding-top">
-                        <a class="btn-primary" href="website-development.html">Learn More</a>   
+                        <a class="btn-primary" href="https://sybiltec.com/website-development">Learn More</a>   
                     </div>
                     </div>
                     </div>
@@ -166,7 +166,7 @@
                         <h3>Website Maintenance</h3>
                         <p>As a business owner, you're most likely a very busy person with little time to spare! I will be your long-term partner to manage the ongoing maintenance of your website.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="website-maintenance.html">Learn More</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-maintenance">Learn More</a>   
                         </div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                         <h3>Training</h3>
                         <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="training.html">Learn More</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/training">Learn More</a>   
                         </div>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                         <h3>Leaflet Design</h3>
                         <p>Do you have an upcoming event that you'd like to promote? I can design a leaflet, poster or social media graphic to showcase your event.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="leaflet-design.html">Learn More</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/leaflet-design">Learn More</a>   
                         </div>
                         </div>
                     </div>
