Add BIPC Delivery Partner badge

--- a/index.html
+++ b/index.html
@@ -409,13 +409,13 @@
                         <img src="images/logos/WordPress-logotype-alternative.png" alt="WordPress">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/CNT-Associates.png" alt="CNT Associates">
-                    </div>
-                    <div class="col-2">
                         <img src="images/logos/British-Library.png" alt="British Library">
                     </div>
                     <div class="col-2">
-                            <img src="images/logos/Business-&-IP-Centre-London.jpg" alt="Business & IP Centre London">
+                        <img src="images/logos/British-Library-BIPC-Delivery-Partner.png" alt="British Library BIPC Delivery Partner">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/logos/CNT-Associates.png" alt="CNT Associates">
                     </div>
                 </div>
             </div>
