Add values to about.html

--- a/about.html
+++ b/about.html
@@ -116,6 +116,18 @@
                         <p>I work together with small business owners and provide personalised services to suit their requirements.</p>
                     </div>
                 </div>
+                <div class="center">
+                    <h2>My Values</h2>
+                        <hr>
+                    <div class="row padding-top">
+                        <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Committed to Succeed</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-people-group"></i><p><strong>Working Together</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Keeping My Promises</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-comments"></i><p><strong>Regular Communication</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-clock"></i><p><strong>Delivering On Time</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-trophy"></i><p><strong>Exceeding Expectations</strong></p></div>
+                    </div>
+                </div>
             </div>
         </div>
             <div class="events section grey">
