Update meta descriptions

--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -25,12 +25,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>5 Best Tools for Remote Working | Blog | Sybiltec</title>       
-        <meta name="Description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools.">
+        <meta name="Description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read Sybil Mayard's article about her five favourite online tools.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="5 Best Tools for Remote Working | Blog | Sybiltec" />
-        <meta property="og:description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools." />
+        <meta property="og:description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read Sybil Mayard's article about her five favourite online tools." />
         <meta property="og:url" content="https://sybiltec.com/5-best-tools-for-remote-working" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/tools-work-repair-hammer-screwdriver-chisel-spanner-1200x630.jpg" />
