--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -24,12 +24,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>7 Reasons Why You Should be Using Shopify | Sybiltec</title>       
-        <meta name="Description" content="Shopify is one of the most popular e-commerce platforms on the market. Read this blog to find out why you should be using Shopify.">
+        <meta name="Description" content="Shopify is one of the most popular e-commerce platforms on the market today. Read Sybil Mayard's blog article to find out why you should be using Shopify.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="7 Reasons Why You Should be Using Shopify | Sybiltec" />
-        <meta property="og:description" content="Shopify is one of the most popular e-commerce platforms on the market. Read this blog to find out why you should be using Shopify." />
+        <meta property="og:description" content="Shopify is one of the most popular e-commerce platforms on the market today. Read Sybil Mayard's blog article to find out why you should be using Shopify." />
         <meta property="og:url" content="https://sybiltec.com/6-reasons-to-use-shopify" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/sale-tag-laptop-1200x630.jpg" />
