--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -25,12 +25,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cyber Security Best Practices - Blog | Sybiltec</title>       
-        <meta name="Description" content="Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog.">
+        <meta name="Description" content="Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips and best practices in this blog.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Cyber Security Best Practices - Blog | Sybiltec" />
-        <meta property="og:description" content="Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog." />
+        <meta property="og:description" content="Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips and best practices in this blog." />
         <meta property="og:url" content="https://sybiltec.com/cyber-security-best-practices-for-business" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/pink-silver-padlock-on-black-red-laptop-computer-turned-on-with-lights.jpg" />
