--- a/projects.html
+++ b/projects.html
@@ -13,12 +13,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projects | London Website Design & Development | Sybiltec</title>    
-        <meta name="Description" content="A selection of Sybil Mayard's personal projects.">
+        <meta name="Description" content="Sybil Mayard has worked on a range of personal projects outside of her web design business. Learn more about VidCareer, Android Poker App and TagNav.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Projects | London Website Design & Development | Sybiltec" />
-        <meta property="og:description" content="A selection of Sybil Mayard's personal projects." />
+        <meta property="og:description" content="Sybil Mayard has worked on a range of personal projects outside of her web design business. Learn more about VidCareer, Android Poker App and TagNav." />
         <meta property="og:url" content="https://sybiltec.com/projects" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
