--- a/website-review.html
+++ b/website-review.html
@@ -13,12 +13,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website Review | London Web Design & Development | Sybiltec</title>       
-        <meta name="Description" content="Sybil Mayard offers services to help small businesses achieve their online potential. Find out about my web development and e-commerce services here.">
+        <meta name="Description" content="If you know that you need to make improvements to your website but you don't know where to start, consider utilising Sybil Mayard's website review service.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Website Review | London Web Design & Development | Sybiltec" />
-        <meta property="og:description" content="Sybil Mayard offers services to help small businesses achieve their online potential. Find out about my web development and e-commerce services here." />
+        <meta property="og:description" content="If you know that you need to make improvements to your website but you don't know where to start, consider utilising Sybil Mayard's website review service." />
         <meta property="og:url" content="https://sybiltec.com/website-review" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
