--- a/faqs.html
+++ b/faqs.html
@@ -110,12 +110,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FAQs | London Website Design & Development | Sybiltec</title>       
-        <meta name="Description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
+        <meta name="Description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="FAQs | London Website Design & Development | Sybiltec" />
-        <meta property="og:description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
+        <meta property="og:description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
         <meta property="og:url" content="https://sybiltec.com/faqs" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
