--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -13,12 +13,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website Maintenance | London Web Design & Development | Sybiltec</title>       
-        <meta name="Description" content="Sybil Mayard offers services to help small businesses achieve their online potential. Find out about my web development and e-commerce services here.">
+        <meta name="Description" content="Once you have launched your website, you'll need to keep it maintained. Purchase one of Sybil Mayard's website maintenance services for ongoing support.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Website Maintenance | London Web Design & Development | Sybiltec" />
-        <meta property="og:description" content="Sybil Mayard offers services to help small businesses achieve their online potential. Find out about my web development and e-commerce services here." />
+        <meta property="og:description" content="Once you have launched your website, you'll need to keep it maintained. Purchase one of Sybil Mayard's website maintenance services for ongoing support." />
         <meta property="og:url" content="https://sybiltec.com/website-maintenance" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
