Add Shopify vs WC blog

--- a/index.html
+++ b/index.html
@@ -347,6 +347,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">  
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/shopify-woocommerce">
+                                <img src="images/shopify-vs-woocommerce.jpg" 
+                                alt="Shopify vs WooCommerce"></a>
+                            <div class="blog-card-text">                    
+                                <h3>Shopify vs WooCommerce: What Are the Differences?</h3>
+                                <p>Read this article to learn about the two most popular e-commerce platforms and help you choose the best option for your business.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps"><img src="images/ux-work-womans-hands-drawing-wireframe-350x183.jpg" 
@@ -373,20 +387,6 @@
                             </div>
                         </div>
                     </div> 
-                    <div class="col-4">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">
-                                <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
-                                alt="Laptop notepad pen and iPhone on table"></a>
-                            <div class="blog-card-text">                    
-                                <h3>How Does a Good Website Showcase Trust?</h3>
-                                <p>Our recent LinkedIn poll indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? Today we examine six key areas you should consider.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="center padding-bottom padding-top">
