--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/about" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
@@ -135,19 +135,17 @@
                     <h2>My Experience</h2>
                     <hr class="left-align">
 
-                    <p>Hi there! My name is Sybil Mayard. I graduated in November 2019 from the <a href="https://www.kent.ac.uk" target="_blank" rel="noopener noreferrer">University of Kent</a> with a Distinction in MSc Computer Science. My goal is to establish myself as a freelance website designer and developer, and help small businesses develop their online presence. Services I offer include website design, website development, website maintenance and training.</p>
+                    <p>Hi there! My name is Sybil Mayard. I graduated in November 2019 from the University of Kent with a Distinction in MSc Computer Science. My goal is to establish myself as a freelance website designer and developer, and help small businesses develop their online presence. Services I offer include website design, website development, website maintenance, training and leaflet design.</p>
 
                     <p>In my spare time I enjoy building websites such as this one 🙂.</p>
 
-                    <p>I also work as QA Engineer for both <a href="https://esmelearning.com/" target="_blank" rel="noopener noreferrer">Esme Learning Solutions</a>, a provider of professional development courses from top-tier universities powered by next-gen AI learning and <a href="https://riffanalytics.ai/" target="_blank" rel="noopener noreferrer">Riff Analytics</a>, the smart platform that improves teams' collaboration and communication skills. I work closely with the IT department to ensure that essential systems function correctly by creating QA plans and carrying out rigorous testing on software and services. My previous role as Web Manager entailed maintaining the Shopify website and building landing pages.</p>
-
-                    <p>My other role is Digital Director and keyboard player for <a href="https://x-blu.com/" target="_blank"  rel="noopener noreferrer">x-blu</a>, an avant-garde post-punk band from South East London.</p> 
+                    <p>I previously worked as QA Engineer for both Esme Learning Solutions, a provider of professional development courses from top-tier universities powered by next-gen AI learning and Riff Analytics, the smart platform that improves teams' collaboration and communication skills. I worked closely with the IT department to ensure that essential systems function correctly by creating QA plans and carrying out rigorous testing on software and services. My previous role as Web Manager entailed maintaining the Shopify website and building landing pages.</p>
 
                     <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money.</p>
 
-                    <p>For more information about x-blu, VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects" rel="noopener noreferrer">Projects</a> page.</p>
+                    <p>For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects" rel="noopener noreferrer">Projects</a> page.</p>
 
-                    <p>Prior to Esme Learning, I worked for <a href="https://www.capacitas.co.uk" target="_blank" rel="noopener noreferrer">Capacitas</a>, a London-based IT consultancy specialising in load testing and performance testing of clients' websites. My role as a Junior Analyst involved scripting the user journey with <a href="https://jmeter.apache.org/" target="_blank" rel="noopener noreferrer">Apache JMeter</a>, running the load tests, analysing the results, then compiling a technical report for the client detailing the issues to be investigated.</p>
+                    <p>Prior to Esme Learning, I worked for Capacitas, a London-based IT consultancy specialising in load testing and performance testing of clients' websites. My role as a Junior Analyst involved scripting the user journey with Apache JMeter, running the load tests, analysing the results, then compiling a technical report for the client detailing the issues to be investigated.</p>
 
                     <p>Click the button below to find out how I can help take your online business to the next level.</p>
                     
