Update blog post on GA4

--- a/index.html
+++ b/index.html
@@ -347,6 +347,19 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">          
+                        <div class="blog-card">  
+                            <a href="https://sybiltec.com/upgrade-google-analytics-4"><img src="images/person-using-google-analytics-on-macbook-air-350x183.jpg" 
+                                alt="Person using Google Analytics on MacBook Air"></a>  
+                            <div class="blog-card-text">               
+                                <h3>How Do I Upgrade to Google Analytics 4?</h3>
+                                <p>If you are still using Universal Analytics, you must upgrade to GA4 before 1st July 2023 to avoid using data. Read my blog post so learn how to perform the update.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
                     <div class="col-4">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/shopify-woocommerce">
@@ -374,19 +387,6 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col-4">          
-                        <div class="blog-card">  
-                            <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website"><img src="images/update-software-app-350x183.jpg" 
-                                alt="Update software app"></a>  
-                            <div class="blog-card-text">               
-                                <h3>A Guide to Updating Your WordPress Website</h3>
-                                <p>If you own a WordPress website, the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div> 
                 </div>
             </div>
             <div class="center padding-bottom padding-top">
