--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -105,7 +105,7 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>How Do I upgrade to Google Analytics 4?</h1>          
+                <h1>How Do I Upgrade to Google Analytics 4?</h1>          
             </div>
         </div>
         <div class="main section">
