Changes to the homepage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybiltec.com" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
@@ -353,7 +352,7 @@
                                 alt="Person using Google Analytics on MacBook Air"></a>  
                             <div class="blog-card-text">               
                                 <h3>How Do I Upgrade to Google Analytics 4?</h3>
-                                <p>If you are still using Universal Analytics, you must upgrade to GA4 before 1st July 2023 to avoid using data. Read my blog post so learn how to perform the update.</p>
+                                <p>If you are still using Universal Analytics, you must upgrade to GA4 before 1st July 2023 to avoid losing data. Read my blog post to learn how to perform the update.</p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Read Blog</a>   
                                 </div>
