Add three blogs on GA4

--- a/blog.html
+++ b/blog.html
@@ -94,14 +94,32 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>How Do I Upgrade to Google Analytics 4?</h2>
-                <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The current version, which is Universal Analytics, will stop processing new data on 1st July 2023, so you need to upgrade to GA4 before this date. Not sure which version of Google …</p>
-                <br>
-                <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Read More</a>
+                    <h2>How to Install GA4 on Your WordPress Website</h2>
+                    <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website">Read More</a>
                 <div class="padding-top">
-                <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
-                <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
-                <br>
+                    <h2>How to Install GA4 on Your Wix Website</h2>
+                    <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-wix-website">Read More</a>
+                </div>
+                <div class="padding-top">
+                    <h2>How to Install GA4 on Your Shopify Website</h2>
+                    <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/install-ga4-shopify-website">Read More</a>
+                </div>
+                <div class="padding-top">
+                    <h2>How Do I Upgrade to Google Analytics 4?</h2>
+                    <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The current version, which is Universal Analytics, will stop processing new data on 1st July 2023, so you need to upgrade to GA4 before this date. Not sure which version of Google …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Read More</a>
+                </div>
+                <div class="padding-top">
+                    <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
+                    <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
+                    <br>
                 <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read More</a>
                 </div>
                 <div class="padding-top">
