Update 4 blogs on GA4

--- a/install-ga4-shopify-website.html
+++ b/install-ga4-shopify-website.html
@@ -113,7 +113,7 @@
 
                 <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events.</p>
 
-                <p>This article assumes that you have created a GA4 property already. If you haven't yet done so, please read my article, <a href="upgrade-google-analytics-4.html">How Do I Upgrade to Google Analytics 4?</a></p>
+                <p>This article assumes that you have created a GA4 property already. If you haven't yet done so, please read my article, <a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></p>
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
 
