--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -169,9 +169,9 @@
                 <h3>Need More Help?</h3>
                 <p>Check out my articles below which explain in more detail how to install GA4 on the most popular website builders:</p>
                 <ol>
-                    <li><a href="install-ga4-shopify-website.html">How to Install GA4 on Your Shopify Website</a></li>
-                    <li><a href="install-ga4-wix-website.html">How to Install GA4 on Your Wix Website</a></li>
-                    <li><a href="install-ga4-wordpress-website.html">How to Install GA4 on Your WordPress Website</a></li>
+                    <li><a href="https://sybiltec.com/install-ga4-shopify-website.html">How to Install GA4 on Your Shopify Website</a></li>
+                    <li><a href="https://sybiltec.com/install-ga4-wix-website.html">How to Install GA4 on Your Wix Website</a></li>
+                    <li><a href="https://sybiltec.com/install-ga4-wordpress-website.html">How to Install GA4 on Your WordPress Website</a></li>
                 </ol>
 
                 <h2>How to Verify That Your GA4 Tracking Code is Working</h2>
