--- a/install-ga4-wix-website.html
+++ b/install-ga4-wix-website.html
@@ -113,7 +113,7 @@
 
                 <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it.</p>
 
-                <p>This article assumes that you have created a GA4 property already. If you haven't yet done so, please read my article, <a href="upgrade-google-analytics-4.html">How Do I Upgrade to Google Analytics 4?</a></p>
+                <p>This article assumes that you have created a GA4 property already. If you haven't yet done so, please read my article, <a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></p>
 
                 <p>Firstly, find your Google Analytics measurement ID. This can be found from the <strong>Web stream</strong> details page in your Google Analytics account.</p>
 
